--- a/QuanLyMayBay/QuanLyMayBay/Views/Shared/_LayoutAdmin.cshtml
+++ b/QuanLyMayBay/QuanLyMayBay/Views/Shared/_LayoutAdmin.cshtml
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sidebar với Header</title>
     <script src="https://cdn.tailwindcss.com"></script>
+    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet">
 </head>
 <body class="bg-gray-100 min-h-screen">
